--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "node": "^21.1.0"
